ParameterResolver and ReturnTypeResolver had lots of redundant code that could be replaced by antikythera/java parser